<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.CityWeatherDetails">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideLine"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideLine"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideLine"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintEnd_toEndOf="@id/endGuideLine"
        app:layout_constraintTop_toTopOf="@id/top1GuideLine"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideLine"
        android:background="@color/white"
        android:elevation="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cityNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textAlignment="center"
            app:fontFamily="@font/lato_regular"
            android:layout_marginTop="26dp"
            android:hint="@string/app_name"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cityWeatherImg"
            android:layout_width="94dp"
            android:layout_height="77dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityNameTxt"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="@id/DescriptionTxt"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/DescriptionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            app:fontFamily="@font/lato_heavy"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/TemperatureTxt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/TemperatureTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="@color/black"
            app:fontFamily="@font/lato_heavy"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/HumidityTxt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/HumidityTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="@color/black"
            app:fontFamily="@font/lato_heavy"
            app:layout_constraintBottom_toTopOf="@id/winSpeedTxt"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/winSpeedTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textColor="@color/black"
            app:fontFamily="@font/lato_heavy"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/winSpeedValueTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/wind_speed"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/sky"
            app:fontFamily="@font/lato_medium"
            app:layout_constraintBottom_toBottomOf="@id/winSpeedTxt"
            android:singleLine="true"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="@id/winSpeedTxt"
            android:textSize="20sp"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/winSpeedTxt"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/humidityValueTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/humidity"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/sky"
            app:fontFamily="@font/lato_medium"
            app:layout_constraintStart_toEndOf="@id/HumidityTxt"
            app:layout_constraintBottom_toBottomOf="@id/HumidityTxt"
            app:layout_constraintTop_toTopOf="@id/HumidityTxt"
            android:textAlignment="center"
            android:singleLine="true"
            android:gravity="center"
            android:maxLines="1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/temperatureValueTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/temperature"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/sky"
            app:fontFamily="@font/lato_medium"
            app:layout_constraintStart_toEndOf="@id/TemperatureTxt"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/TemperatureTxt"
            app:layout_constraintTop_toTopOf="@id/TemperatureTxt"
            android:singleLine="true"
            android:gravity="center"
            android:maxLines="1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descriptionValueTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/sky"
            app:fontFamily="@font/lato_medium"
            android:singleLine="true"
            android:maxLines="1"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/DescriptionTxt"
            app:layout_constraintBottom_toBottomOf="@id/DescriptionTxt"
            app:layout_constraintTop_toTopOf="@id/DescriptionTxt"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <include
            android:id="@+id/itemProgressBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            layout="@layout/item_progress_bar"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/topGuideLine"
        android:background="@color/sky"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/weatherDetailsBackImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/arrow_back_24px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top1GuideLine"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideLine"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>